[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lintelle"
version = "0.0.1"
requires-python = ">= 3.8"
dependencies = [
  "snowflake-connector-python",
  "openai",
  "ollama",
  "requests",
  "fastapi"
]

authors = [
  {name = "Tim Wang", email = "landryraccoon@gmail.com"},
]
description = "Shim to improve ML model interoperability"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: Apache Software License",

  # TODO: Indicate who your project is intended for
  
  # TODO: Specify the Python versions you support here.
]

[project.urls]
Repository = "https://github.com/landryraccoon/lintel"

[project.scripts]
lintelle-test = "lintelle.cli.test:main"
